# updoot

./: Cargo.toml  README.md  index.html
src/: components.rs  lib.rs  main.rs  models.rs  routes.rs
src/components/: game_component.rs  hn_comment_component.rs  navbar.rs
src/models/: gpt3_models.rs  hn_request_models.rs  lobsters_request_models.rs
