[package]
name = "updoot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
reqwest = { version = "0.11", features = ["json", "blocking"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

id_tree = "1.8.0"
id_tree_layout = "2.0.3"

