[package]
name = "updoot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"

reqwest = { version = "0.11", features = ["json", "blocking"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

id_tree = "1.8.0"
id_tree_layout = "2.0.3"

web-sys = "0.3.59"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
yew-hooks = "0.1.56"
yew-router = "0.16"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
